syntax = "proto3";

package filestorage;

service FileStorage {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
    rpc UploadFile(UploadRequest) returns (UploadResponse);
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse);
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
    rpc GetFileMeta(GetFileMetaRequest) returns (GetFileMetaResponse);
}

message AuthenticateRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateResponse {
    string status = 1;
    string jwt_token = 2;
}

message UploadRequest {
    string jwt_token = 1;
    string file_name = 2;
    bytes file_data = 3;
}

message UploadResponse {
    string status = 1;
    string file_id = 2;
}

message DownloadRequest {
    string jwt_token = 1;
    string file_id = 2;
}

message DownloadResponse {
    string status = 1;
    bytes file_data = 2;
}

message ListFilesRequest {
    string jwt_token = 1;
}

message ListFilesResponse {
    repeated FileItem files = 1;
}

message FileItem {
    string file_id = 1;
    string file_name = 2;
    int64 file_size = 3;
}

message DeleteFileRequest {
    string jwt_token = 1;
    string file_id = 2;
}

message DeleteFileResponse {
    string status = 1;
}

message GetFileMetaRequest {
    string jwt_token = 1;
    string file_id = 2;
}

message GetFileMetaResponse {
    string status = 1;
    string file_name = 2;
    int64 file_size = 3;
}
